# Python-M6GP

./: Arguments.py  EULA.txt  Main_M6GP_classification_example.py  Main_M6GP_standalone.py  README.md  README.txt  citation.bib  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yaml
m6gp/: GeneticOperators.py  Individual.py  M6GP.py
